--- a/template-index.html
+++ b/template-index.html
@@ -3,18 +3,16 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InterchangeDemo</title>
+    <title>Foundation for Sites</title>
     <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/interchange_app.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-<h1>Test</h1>
 
-    <img data-interchange=" [http://www.fillmurray.com/200/500, small],[http://www.fillmurray.com/500/500, medium],[http://www.fillmurray.com/1200/300, large]">
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
-    <script src="js/interchange_app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
